--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "courier-system-back-end",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
