--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongoose": "^5.4.2"
+    "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.2",
+    "validator": "^10.10.0"
   },
   "devDependencies": {},
   "description": ""
