--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.2",
+    "nodemon": "^1.18.9",
     "validator": "^10.10.0"
   },
   "devDependencies": {},
