--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.2",
     "nodemon": "^1.18.9",
-    "validator": "^10.10.0"
+    "validator": "^10.11.0"
   },
   "devDependencies": {},
   "description": ""
