--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.4.2",
     "nodemon": "^1.18.9",
+    "path": "^0.12.7",
     "validator": "^10.11.0"
   },
   "devDependencies": {},
