--- a/reactcrud/api/package.json
+++ b/reactcrud/api/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mongoose": "^5.4.11"
+    "mongodb-short-id": "^0.3.3",
+    "mongoose": "^5.4.11",
+    "short-mongo-id": "^0.1.1",
+    "shortid": "^2.2.14"
   }
 }
