--- a/reactcrud/package.json
+++ b/reactcrud/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.2.1",
     "material-ui": "^0.20.2",
     "react": "^16.7.0",
+    "react-bootstrap-dropdown-menu": "^1.1.15",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
